# brainscanner-motor-control

./: .gitignore  pyproject.toml  req.txt
archive/: Strokewise-Main.py  StrokewiseMain_Back.py  StrokewiseMain_Front.py  StrokewiseMain_Initialization.py  Test_17_5_23.py  lab_params.py  solve_ellipse_sympy.py  stroke_main.py
docs/: code.rst  conf.py  index.rst
docs/html/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: code.rst.txt  index.rst.txt
examples/: test1.py  test2.py
src/: gui.py
src/mwscanner_control/: __init__.py  motor_control.py  util.py  vna_control.py
testing_hardware/: bounce.py  substitute_sympy.py
